[package]
name = "salvo_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson2 = "2.0"
tokio = { version = "1.14.0", features = ["full"] }
salvo = "0.16"
log = "0.4"
fast_log = "1.3.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
futures = "0.3"
redis = {version = "0.20", features = ["async-std-comp"] }
async-trait = "0.1"
rbatis = { version = "3.0", default-features = false, features = ["runtime-tokio-rustls", "mysql"] }
